--- a/style.css
+++ b/style.css
@@ -24,6 +24,68 @@ hr {
     margin: 1em 0; padding: 0;
 }
 
+/* Column Styling */
+
+/* .column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 700px) {
+    .column {
+        width: 100%;
+    }
+} */
+
+/* Modal Styling */
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    /* overflow: auto; */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+    /* Modal Content/Box */
+.modal-content {
+    background-color: #1F2833;
+    margin: 8% auto; /* 15% from the top and centered */
+    padding: 10px;
+    border: 1px solid #45A29E;
+    width: 50%; /* Could be more or less, depending on screen size */
+}
+
+.modal-content code {
+    max-height: 300px;
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* Titles Styling */
 
 div.title_3 {
@@ -39,26 +101,43 @@ h3 {
     margin: 2px;
 }
 
+.show_code {
+    margin: auto;
+    margin-top: 10px;
+    cursor: pointer;
+    border: 2px solid #45A29E;
+    background-color: #1b1918;
+    color: #45A29E;
+    outline: none;
+    padding: 0.5rem 0.8rem;
+    font-family: 'Inconsolata', monospace;
+}
+
+.show_code:hover {
+    background-color: #45A29E;
+    color: #e3e3e4;
+}
+
 /* Navbar Styling */
 /* Vertical */
-lu.v_navbar {
+.v_navbar lu {
     margin: 0;
     padding: 0;
 }
 
-li.v_navbar_items {
+.v_navbar li {
     list-style-type: none;
     font-size: 20px;
     margin-bottom: 2px;
     font-weight: bold;
 }
 
-a.v_navbar_items_link {
+.v_navbar a {
     text-decoration: none;
     color: #45A29E;
 }
 
-a.v_navbar_items_link:hover {
+.v_navbar a:hover{
     background-color: #e3e3e4;
     padding: 2px;
 }
